# generic-optimization-workflow

./: .gitignore  README.md  my_launchpad.yaml  pyproject.toml
.pytest_tmp/test_evaluator_invalid_output_0/project/: invalid_output_eval.py  problem.yaml
.pytest_tmp/test_evaluator_missing_output_0/project/: bad_eval.py  problem.yaml
.pytest_tmp/test_evaluator_nonzero_exit_wi0/project/: bad_exit_eval.py  problem.yaml
.pytest_tmp/test_evaluator_timeout_is_reco0/project/: problem.yaml
.pytest_tmp/test_local_run_smoke_creates_e0/project/: problem.yaml  toy_eval.py
.pytest_tmp/test_manual_evaluate_autogener0/project/: problem.yaml
.pytest_tmp/test_manual_evaluate_falls_bac0/project/: problem.yaml
.pytest_tmp/test_manual_evaluate_writes_re0/project/: problem.yaml
docs/: CONFIGURATION_EXAMPLE.md  GOW_Developer_Guide.docx  GOW_User_Guide.docx  PROBLEM_CONFIGURATION.md  USAGE.md  User_Reference_Manual.md
examples/toy/: optimization_specs.yaml  problem.json  problem.yaml
launcher_2026-01-03-01-18-03-286428/: FW.json
runs/test_candidate_001/: input.json  output.json
runs/toy_from_config/c001/: input.json
src/gow/: __main__.py  candidate_ids.py  cli.py  layout.py
src/gow/config/: __init__.py  loader.py  models.py
src/gow/evaluation/: __init__.py  evaluate.py
src/gow/evaluator/: __init__.py  external.py  io.py  (+1 more)
tests/: toy_eval.py
tests/unit/: test_candidate_ids.py  test_cli_attempts.py  test_config_validation.py  test_evaluator_failures.py  test_fw_metadata_parity.py  test_local_optimizer_kwargs.py  test_local_run.py  test_namespace_enforcement.py
(+13 files in other folders)
