[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-optimization-workflow"
version = "0.1.0"
description = "Generic optimization scientific workflow framework based on FireWorks."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",    
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
