[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "generic-optimization-workflow"
version = "0.1.0"
description = "Generic optimization scientific workflow framework based on FireWorks."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0",
  "typer>=0.12.0",
  "filelock>=3.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "mongomock>=4.1.2",
]

fireworks = [
  "FireWorks>=2.0.0",
  "pymongo>=4.0.0",
]

[project.scripts]
gow = "gow.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]